[metadata]
name = dai66_lib
version = attr: dai66_lib.__version__
author = Alex D.
author_email = dai@ddgrp.net
description = A small package for pyhon utils
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = ./
packages = find:
python_requires = >=3.10

[options.packages.find]
where = ./

